<resources>
    <string name="app_name">ScannerApp</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="auto_capture">Auto Capture</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="scan_gateway">Scan Gateway</string>
    <string name="complete_installation">Finish Installation.</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="scan">Scan</string>
    <string name="rescan">Re-scan</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
